--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-checkbox": "^1.1.1",
+    "@radix-ui/react-collapsible": "^1.1.0",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
@@ -45,8 +47,10 @@
     "react-drag-drop-files": "^2.3.10",
     "react-hook-form": "^7.49.3",
     "react-i18next": "^13.3.1",
+    "react-player": "^2.16.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.21.3",
+    "recharts": "^2.12.7",
     "tailwind-merge": "^2.2.1",
     "use-debounce": "^10.0.1",
     "zod": "^3.22.4",
